# Learn-OpenGL

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  glad.c  main.cpp
src/1.getting-started/1.1.hello_window/: hello_window.cpp
src/1.getting-started/1.2.hello_window_clear/: hello_window_clear.cpp
src/1.getting-started/2.1.hello_triangle/: hello_triangle.cpp
src/1.getting-started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
src/1.getting-started/2.3.hello_triangle_exercise1/: hello_triangle_exercise1.cpp
src/1.getting-started/2.3.hello_triangle_exercise2/: hello_triangle_exercise2.cpp
src/1.getting-started/2.3.hello_triangle_exercise3/: hello_triangle_exercise3.cpp
src/1.getting-started/3.1.shaders_uniform/: shaders_uniform.cpp
src/1.getting-started/3.2.shaders_interpolation/: shaders_interpolation.cpp
src/1.getting-started/3.3.shaders_class/: shaders_class.cpp
src/1.getting-started/3.4.shaders_exercise1/: shaders_exercise1.cpp
src/1.getting-started/3.5.shaders_exercise2/: shaders_exercise2.cpp
src/1.getting-started/3.6.shaders_exercise3/: shaders_exercise3.cpp
src/1.getting-started/4.1.textures/: textures.cpp
src/1.getting-started/4.2.textures_combined/: textures_combined.cpp
src/1.getting-started/4.3.textures_exercise1/: textures_exercise1.cpp
src/1.getting-started/4.4.textures_exercise2/: textures_exercise2.cpp
src/1.getting-started/4.5.textures_exercise3/: textures_exercise3.cpp
src/1.getting-started/4.6.textures_exercise4/: textures_exercise4.cpp
src/1.getting-started/5.1.transformations/: transformation.cpp
src/1.getting-started/5.2.transformations_exercise1/: transformation_exercise1.cpp
src/1.getting-started/5.3.transformations_exercise2/: transformation_exercise2.cpp
src/1.getting-started/6.1.coordinate_systems/: coordinate_systems.cpp
src/1.getting-started/6.2.coordinate_systems_depth/: coordinate_systems_depth.cpp
src/1.getting-started/6.3.coordinate_systems_multiple/: coordinate_systems_multiple.cpp
src/1.getting-started/6.4.coordinate_systems_exercise3/: coordinate_systems_exercise3.cpp
src/1.getting-started/7.1.camera_circle/: camera_circle.cpp
src/1.getting-started/7.2.camera_keyboard_dt/: camera_keyboard_dt.cpp
src/1.getting-started/7.3.camera_keyboard_zoom/: camera_keyboard_zoom.cpp
src/1.getting-started/7.4.camera_class/: camera_class.cpp
src/2.lighting/1.colors/: colors.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: basic_lighting_diffuse.cpp
src/2.lighting/2.2.basic_lighting_specular/: basic_lighting_specular.cpp
src/2.lighting/2.3.basic_lighting_exercise1/: basic_lighting_excercise1.cpp
src/2.lighting/2.4.basic_lighting_exercise2/: 2.4.basic_lighting.fs  2.4.basic_lighting.vs  basic_lighting_excercise2.cpp
src/2.lighting/2.5.basic_lighting_exercise3/: 2.5.basic_lighting.fs  2.5.basic_lighting.vs  basic_lighting_excercise3.cpp
src/2.lighting/3.1.materials/: materials.cpp
src/2.lighting/3.2.materials_exercise1/: materials_exercise1.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: lighting_maps_diffuse.cpp
src/2.lighting/4.2.lighting_maps_specular_map/: lighting_maps_specular.cpp
src/2.lighting/4.3.lighting_maps_exercise2/: lighting_maps_excercise2.cpp
src/2.lighting/4.5.lighting_maps_exercise4/: lighting_exercise4.cpp
src/2.lighting/5.1.light_casters_directional/: 5.1.light_casters.fs  light_casters_directional.cpp
src/2.lighting/5.2.light_casters_point/: 5.2.light_casters.fs  light_casters_point.cpp
src/2.lighting/5.3.light_casters_spot/: light_casters_spot.cpp
src/2.lighting/5.4.light_casters_spot_soft/: light_casters_spot_soft.cpp
src/2.lighting/6.multiple_lights/: multiple_lights.cpp
src/2.lighting/6.multiple_lights_exercise1_biochemical_lab/: multiple_lights_exercise1_biochemical_lab.cpp
src/2.lighting/6.multiple_lights_exercise1_desert/: multiple_lights_exercise1_desert.cpp
src/2.lighting/6.multiple_lights_exercise1_factory/: multiple_lights_exercise1_factory.cpp
src/2.lighting/6.multiple_lights_exercise1_horror/: multiple_lights_exercise1_horror.cpp
src/3.model_loading/1.model_loading/: model_loading.cpp
src/4.advanced_opengl/1.1.depth_testing/: depth_testing.cpp
src/4.advanced_opengl/1.2.depth_testing_view/: depth_testing_view.cpp
src/4.advanced_opengl/2.stencil_testing/: stencil_testing.cpp
src/4.advanced_opengl/3.1.blending_discard/: blending_discard.cpp
src/4.advanced_opengl/3.2.blending_sort/: blending_sorted.cpp
src/Ch1-Getting_Started/: README.md
src/Ch1-Getting_Started/1.1.hello_window/: hello_window.cpp
src/Ch1-Getting_Started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
src/Ch1-Getting_Started/2.3 hello_triangle_exercises/: exercise1.cpp  exercise2.cpp
src/Ch1-Getting_Started/2.5.hello_triangle_exercise3/: exercise3.cpp
src/Ch1-Getting_Started/3.1 shaders_uniform/: shaders_uniform.cpp
src/Ch1-Getting_Started/3.2 shaders_interpolation/: shaders_interpolation.cpp
src/Ch1-Getting_Started/3.3.shaders_class/: shaders_class.cpp
src/Ch1-Getting_Started/3.4 shaders_exercises/: exercise2.cpp
src/Ch1-Getting_Started/3.4.shaders_exercise1/: exercise1.cpp  shader.vert
src/Ch1-Getting_Started/3.5.shaders_exercise2/: exercise2.cpp
src/Ch1-Getting_Started/3.6.shaders_exercise3/: exercise3.cpp  shader.vert
src/Ch1-Getting_Started/4.1.textures/: texture.frag  texture.vert  textures.cpp
src/Ch1-Getting_Started/4.2.textures_combined/: textures_combined.cpp
src/Ch1-Getting_Started/4.3.textures_exercise1/: textures_exercise1.cpp
src/Ch1-Getting_Started/4.4.textures_exercise2/: textures_exercise2.cpp
src/Ch1-Getting_Started/4.5.textures_exercise3/: textures_exercise3.cpp
src/Ch1-Getting_Started/4.6.textures_exercise4/: texture.frag  textures_exercise4.cpp
src/Ch1-Getting_Started/5.1.transformations/: transformations.cpp
src/Ch1-Getting_Started/5.2.transformations_exercise1/: exercise1.cpp
src/Ch1-Getting_Started/5.2.transformations_exercise2/: exercise2.cpp
src/Ch1-Getting_Started/6.1.coordinate_systems/: coordinate_systems.cpp
src/Ch2-Lighting/1.colors/: colors.cpp
(+165 files in other folders)
